--- a/css/styles1.css
+++ b/css/styles1.css
@@ -1,7 +1,7 @@
 ul {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 20px;
     overflow: hidden;
     background-color: #333;
   }
@@ -11,17 +11,31 @@ ul {
   }
   
   li a {
-    display: block;
+    display: inline;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px;
     text-decoration: none;
+    font-size: 16px;
   }
   
   li a:hover:not(.active) {
     background-color: #111;
   }
   
-  .active {
+  .login {
     background-color: #b3b3b3;
   }
+
+  var {
+    float: right;
+    font-size: 20px;
+    display: inline;
+    color: white;
+    text-align: center;
+    
+  }
+  var a:hover:not(.active){
+    background-color: #111;
+  }
+  
